# clarivate-c3-datafeed-api-client-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml  sample.py
src/clarivate/datafeedapi/: client.py  config.py
